Sprint one finished 'had been finished in a while now, but I just commited it', only thing left for Sprint one is to insert real data, but that can be done later in the future as well 'meaning before our next meeting'. And started creating the classes needed for the TourGuides CMS page with real code inside of the classes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,5 +32,6 @@ services:
             - 8080:80
         environment:
             - PMA_HOST=mysql
+            - UPLOAD_LIMIT=300M
 volumes:
     mysqldata: {}
