--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,5 @@
 {
-  "require": {
-    "phpmailer/phpmailer": "^6.8",
-    "firebase/php-jwt": "^6.4"
-  }
+    "require": {
+        "phpmailer/phpmailer": "^6.8"
+    }
 }
