--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.8",
-        "endroid/qr-code": "^4.8"
+        "endroid/qr-code": "^4.8",
+        "khanamiryan/qrcode-detector-decoder": "^2.0"
     }
 }
